projects/compiler/test/typechecker/match/error_expr_empty_block.out
Error at %TEST_DIR%/typechecker/match/error_expr_empty_block.abra:2:3
Empty block for match case
  |    else => {}
       ^
Each case in a match expression must result in a value
